--- a/PortAuthorityApplication/PortAuthorityApplication.csproj
+++ b/PortAuthorityApplication/PortAuthorityApplication.csproj
@@ -93,6 +93,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PortAuthority\PortAuthority.csproj">
+      <Project>{e4827850-7a32-48e1-9285-24d73e919171}</Project>
+      <Name>PortAuthority</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
